# quiet-chaos

./: .dockerignore  .gitignore  .semgrepignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.host.yml  docker-compose.yml  pyproject.toml
.github/: AGENTS.md
.github/workflows/: ci.yml
examples/: config.srv.toml  config.toml  docker-compose.host.yml
src/quiet_chaos/: __init__.py  __main__.py  bounded.py  cli.py  config.py  defaults.py  events.py  fingerprints.py  health.py  pacing.py  rate_limit.py  safety.py  seed_sources.py  telemetry.py  traffic.py  user_agents.py
tests/: test_config.py  test_fingerprints.py  test_pacing.py  test_safety.py  test_seed_sources.py  test_traffic.py  test_user_agents.py
